# HololensIGTLink

./: .hooks-config.bash  CMakeLists.txt  PolyDataReceiver.cpp  README
Utilities/GitSetup/: config
